--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     padding: 0;
 }
 
+:root {
+    font-size: 18px;
+}
+
 body {
     width: 100vw;
     height: 100vh;
@@ -14,8 +18,12 @@ body {
     gap: 10px;
 }
 
+h1 {
+    font-size: 3rem;
+}
+
 .board_container {
-    width: 50vw;
+    width: 40vw;
     height: 50vh;
     border: 2px solid black;
     display: grid;
@@ -24,4 +32,14 @@ body {
 
 .board_square {
     border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.5rem;
+}
+
+.input_container {
+    display: grid;
+    grid-template-columns: 3fr 1fr 3fr 1fr;
+    column-gap: 10px;
 }
