--- a/style.css
+++ b/style.css
@@ -43,3 +43,8 @@ h1 {
     grid-template-columns: 3fr 1fr 3fr 1fr;
     column-gap: 10px;
 }
+
+.name_display_container {
+    display: flex;
+    gap: 10px;
+}
