--- a/style.css
+++ b/style.css
@@ -4,8 +4,11 @@
     padding: 0;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap');
+
 :root {
     font-size: 18px;
+    font-family: "Afacad Flux", sans-serif;
 }
 
 body {
@@ -16,35 +19,74 @@ body {
     justify-content: center;
     align-items: center;
     gap: 10px;
+    background-color: #4c1d95;
 }
 
 h1 {
     font-size: 3rem;
+    color: white;
 }
 
 .board_container {
     width: 40vw;
     height: 50vh;
-    border: 2px solid black;
+    border: 2px solid white;
     display: grid;
     grid-template: repeat(3, 1fr) / repeat(3,1fr);
+    margin: 10px;
 }
 
 .board_square {
-    border: 1px solid black;
+    border: 1px solid white;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2.5rem;
+    font-size: 3rem;
+    font-weight: 900;
+    color: white;
+    cursor: pointer;
+}
+
+.board_square:hover {
+    background-color: #6d28d9;
 }
 
 .input_container {
     display: grid;
     grid-template-columns: 3fr 1fr 3fr 1fr;
     column-gap: 10px;
+    width: 40vw;
+}
+
+input {
+    padding: 4px;
+}
+
+button {
+    padding: 4px 10px;
+    background-color: #db2777;
+    color: white;
+}
+
+button:hover {
+    background-color: #ec4899;
+}
+
+.reset_button {
+    border-radius: 8px;
 }
 
 .name_display_container {
     display: flex;
     gap: 10px;
+}
+
+.name_display_container > div {
+    color: white;
+}
+
+#game_state {
+    height: 21px;
+    color: white;
+    margin-bottom: 7px;
 }
