--- a/style.css
+++ b/style.css
@@ -5,10 +5,13 @@
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gasoek+One&display=swap');
+
 
 :root {
     font-size: 18px;
-    font-family: "Afacad Flux", sans-serif;
+    font-family: "Gasoek One", "Afacad Flux", sans-serif;
+    font-weight: 600;
 }
 
 body {
@@ -19,7 +22,8 @@ body {
     justify-content: center;
     align-items: center;
     gap: 10px;
-    background-color: #4c1d95;
+    background: rgb(34,193,195);
+    background: linear-gradient(to right, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
 }
 
 h1 {
@@ -41,14 +45,14 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 3rem;
+    font-size: 3.5rem;
     font-weight: 900;
     color: white;
     cursor: pointer;
 }
 
 .board_square:hover {
-    background-color: #6d28d9;
+    background-color: rgb(183, 238, 186);
 }
 
 .input_container {
@@ -56,29 +60,44 @@ h1 {
     grid-template-columns: 3fr 1fr 3fr 1fr;
     column-gap: 10px;
     width: 40vw;
+    margin: 10px;
 }
 
 input {
     padding: 4px;
+    background: rgba(0, 0, 0, 0);
+    border: 1px solid white;
+    outline: none;
+    color: white;
+    font-weight: 600;
+}
+
+input::placeholder {
+    color: rgb(255, 255, 255);
+    font-weight: 400;
 }
 
 button {
     padding: 4px 10px;
-    background-color: #db2777;
+    background-color: #d3739e;
     color: white;
+    border: 1px solid white;
+    font-weight: 600;
 }
 
 button:hover {
-    background-color: #ec4899;
+    background-color: #e499bb;
 }
 
 .reset_button {
     border-radius: 8px;
+    padding: 4px 25px;
 }
 
 .name_display_container {
     display: flex;
     gap: 10px;
+    margin: 5px;
 }
 
 .name_display_container > div {
@@ -88,5 +107,5 @@ button:hover {
 #game_state {
     height: 21px;
     color: white;
-    margin-bottom: 7px;
+    margin-bottom: 8px;
 }
